--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.5.2",
+    "debug": "^3.1.0",
     "node-dir": "^0.1.16",
     "truffle-code-utils": "^1.1.0",
     "truffle-contract": "^3.0.0",
