--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "babel-runtime": "^6.26.0",
     "esdoc": "^1.0.4",
     "esdoc-standard-plugin": "^1.0.0",
-    "ethereumjs-testrpc": "^6.0.1",
     "fs-extra": "^4.0.2",
+    "ganache-cli": "^6.0.3",
     "mocha": "^4.0.1",
     "mocha-webpack": "^1.0.1",
     "node-nightly": "^1.7.2",
