--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "debug": "^3.1.0",
     "node-dir": "^0.1.17",
     "redux": "^3.7.2",
+    "redux-cli-logger": "^2.0.0",
+    "redux-saga": "^0.16.0",
+    "reselect": "^3.0.1",
     "truffle-code-utils": "^1.1.0",
     "truffle-contract": "^3.0.0",
     "truffle-expect": "0.0.3",
@@ -46,7 +49,7 @@
     "truffle-resolver": "^4.0.1",
     "web3": "^0.20.2",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4",
+    "webpack-dev-server": "^2.10.1",
     "webpack-node-externals": "^1.6.0"
   }
 }
