Switch to released version of redux-cli-logger (v3.0.1)

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "debug": "^3.1.0",
     "node-dir": "^0.1.17",
     "redux": "^3.7.2",
-    "redux-cli-logger": "git://github.com/gnidan/redux-cli-logger.git",
+    "redux-cli-logger": "^2.0.1",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1",
     "truffle-code-utils": "^1.1.0",
