Configure separate environments for redux/webpack
- Separate Redux store configuration into common/development/test/production

- Separate webpack similarly. Define common behavior and override.

- Add server for webpack to watch changes and rewrite bundle, and to run a
  server for remote redux devtools.

- Hook up remote-redux-devtools in the dev Redux environment

- De-cruft package.json

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/debugger.js",
   "scripts": {
     "docs": "esdoc",
-    "build": "webpack",
-    "remotedev": "remotedev --hostname=127.0.0.1 --port=1117",
-    "test": "mocha-webpack --webpack-config webpack.config-test.js"
+    "build": "webpack --config webpack/webpack.config.js",
+    "start": "node ./webpack/dev-server.js",
+    "test": "mocha-webpack --webpack-config webpack/webpack.config-test.js"
   },
   "keywords": [
     "ethereum",
@@ -18,20 +18,19 @@
   "author": "Tim Coulter <tim.coulter@consenseys.net>",
   "license": "MIT",
   "dependencies": {
-    "async": "^1.5.2",
     "debug": "^3.1.0",
-    "node-dir": "^0.1.17",
     "redux": "^3.7.2",
     "redux-cli-logger": "^2.0.1",
     "redux-saga": "^0.16.0",
     "remote-redux-devtools": "^0.5.12",
     "reselect": "^3.0.1",
     "truffle-code-utils": "^1.1.0",
-    "truffle-contract": "^3.0.0",
     "truffle-expect": "0.0.3",
-    "truffle-solidity-utils": "^1.1.0"
+    "truffle-solidity-utils": "^1.1.0",
+    "web3": "^0.20.2"
   },
   "devDependencies": {
+    "async": "^1.5.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -40,20 +39,21 @@
     "babel-runtime": "^6.26.0",
     "esdoc": "^1.0.4",
     "esdoc-standard-plugin": "^1.0.0",
+    "express": "^4.16.2",
     "fs-extra": "^4.0.2",
     "ganache-cli": "^6.0.3",
     "mocha": "^4.0.1",
     "mocha-webpack": "^1.0.1",
-    "node-nightly": "^1.7.2",
     "remotedev-server": "^0.2.4",
     "truffle-artifactor": "^3.0.0",
     "truffle-box": "^1.0.3",
     "truffle-core": "^4.0.1",
     "truffle-migrate": "^2.0.0",
     "truffle-resolver": "^4.0.1",
-    "web3": "^0.20.2",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.10.1",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-dev-middleware": "^2.0.4",
+    "webpack-merge": "^4.1.1",
+    "webpack-node-externals": "^1.6.0",
+    "write-file-webpack-plugin": "^4.2.0"
   }
 }
