--- a/package.json
+++ b/package.json
@@ -47,9 +47,10 @@
     "remotedev-server": "^0.2.4",
     "truffle-artifactor": "^3.0.0",
     "truffle-box": "^1.0.3",
-    "truffle-core": "^4.0.1",
+    "truffle-debug-utils": "^1.0.0",
     "truffle-migrate": "^2.0.0",
     "truffle-resolver": "^4.0.1",
+    "truffle-workflow-compile": "^1.0.0",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^2.0.4",
     "webpack-merge": "^4.1.1",
