--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "docs": "esdoc",
     "build": "webpack --config webpack/webpack.config.js",
     "start": "node ./webpack/dev-server.js",
-    "test": "mocha-webpack --webpack-config webpack/webpack.config-test.js"
+    "test": "mocha-webpack --webpack-config webpack/webpack.config-test.js",
+    "test:debug": "node --inspect ./node_modules/.bin/mocha-webpack --webpack-config webpack/webpack.config-test.js"
   },
   "keywords": [
     "ethereum",
