--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "debug": "^3.1.0",
     "json-pointer": "^0.6.0",
+    "node-interval-tree": "^1.3.3",
     "redux": "^3.7.2",
     "redux-cli-logger": "^2.0.1",
     "redux-saga": "^0.16.0",
@@ -29,7 +30,8 @@
     "truffle-code-utils": "^1.1.0",
     "truffle-expect": "0.0.3",
     "truffle-solidity-utils": "^1.1.0",
-    "web3": "^0.20.2"
+    "web3": "^0.20.2",
+    "web3-eth-abi": "^1.0.0-beta.29"
   },
   "devDependencies": {
     "async": "^1.5.2",
