--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Tim Coulter <tim.coulter@consenseys.net>",
   "license": "MIT",
   "dependencies": {
+    "bignumber.js": "^6.0.0",
     "debug": "^3.1.0",
     "json-pointer": "^0.6.0",
     "node-interval-tree": "^1.3.3",
