Separate selector creators into reselect-tree pkg

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "redux-cli-logger": "^2.0.1",
     "redux-saga": "^0.16.0",
     "remote-redux-devtools": "^0.5.12",
-    "reselect": "^3.0.1",
+    "reselect-tree": "^1.0.0",
     "truffle-code-utils": "^1.1.0",
     "truffle-expect": "0.0.3",
     "truffle-solidity-utils": "^1.1.0",
@@ -47,7 +47,7 @@
     "esdoc-standard-plugin": "^1.0.0",
     "express": "^4.16.2",
     "fs-extra": "^4.0.2",
-    "ganache-core": "^2.0.2",
+    "ganache-cli": "^6.1.0-beta.4",
     "mocha": "^4.0.1",
     "mocha-webpack": "^1.0.1",
     "remotedev-server": "^0.2.4",
