--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,29 @@
 sudo: required
+language: node_js
+node_js:
+  - "6.9.1"
 
-language: generic
+env:
+  global:
+  - GIT_NAME: "'Travis Deployer'"
+  - GIT_EMAIL: gnidan@trufflesuite.com
+  - GH_REF: git@github.com:trufflesuite/truffle-debugger.git
+  - WATCH_BRANCH: "develop"
 
 services:
   - docker
+
+before_script:
+- >
+  if [ "${TRAVIS_PULL_REQUEST}" = "false" -a "$TRAVIS_BRANCH" = "${WATCH_BRANCH}" ];
+  then
+    openssl aes-256-cbc -K $encrypted_59c1e9d151c0_key -iv $encrypted_59c1e9d151c0_iv -in deploy-key.enc -out deploy-key -d
+    chmod 600 deploy-key
+    eval `ssh-agent -s`
+    ssh-add deploy-key
+    git config user.name "${GIT_NAME}"
+    git config user.email "${GIT_EMAIL}"
+  fi
 
 before_install:
   - docker pull truffle/ci
@@ -23,3 +43,15 @@ script:
         -e TRAVIS_BRANCH \
         -e TEST \
       truffle/ci:latest run_tests
+
+
+after_success:
+- >
+  if [ "${TRAVIS_PULL_REQUEST}" = "false" -a "$TRAVIS_BRANCH" = "${WATCH_BRANCH}" ];
+  then
+    git push origin :gh-pages
+    npm run docs && \
+    git add -f docs && \
+    git commit -m "Update docs" && \
+    git subtree push --prefix docs origin gh-pages
+  fi
