--- a/package.json
+++ b/package.json
@@ -63,5 +63,13 @@
     "webpack-merge": "^4.1.1",
     "webpack-node-externals": "^1.6.0",
     "write-file-webpack-plugin": "^4.2.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/trufflesuite/truffle-debugger.git"
+  },
+  "bugs": {
+    "url": "https://github.com/trufflesuite/truffle-debugger/issues"
+  },
+  "homepage": "https://github.com/trufflesuite/truffle-debugger#readme"
 }
