--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "truffle-code-utils": "^1.1.0",
     "truffle-expect": "0.0.3",
     "truffle-solidity-utils": "^1.1.0",
-    "web3": "^0.20.2",
+    "web3": "1.0.0-beta.33",
     "web3-eth-abi": "^1.0.0-beta.29"
   },
   "devDependencies": {
